# GTNH-Translations

./: .editorconfig  .gitignore  LICENSE  README.md  README_ja_JP.md  README_ko_KR.md  README_template.md  compare_gt.py  compare_lang_and_zs.py  compare_quest_book.py  hooks.json  langset.py  main.py  modpack.py  paratranz-projects.json  parse_issue.py  parse_issue_compare_gt.py  parse_issue_compare_lang_and_zs.py  parse_issue_compare_quest_book.py  pyproject.toml  translationpack.py  utils.py
.github/ISSUE_TEMPLATE/: de_DE.md  es_ES.md  fr_FR.md  issue_template_template  ja_JP.md  ko_KR.md  other.md  pl_PL.md  pt_BR.md  ru_RU.md  tr_TR.md  zh_CN.md
.github/actions/download-daily/: action.yml
.github/actions/download-nightly/: action.yml
.github/actions/ensure-dependencies/: action.yml
.github/scripts/: future_mc_lang_diff.py  pack.py
.github/workflows/: conditional-sync-to-paratranz-parallel.yml  conditional-sync-to-paratranz.yml  daily-schedule.yml  nightly-schedule.yml  publish-all-daily-lang-packs.yml  publish-all-nightly-lang-packs.yml  publish-daily-lang-pack.yml  publish-nightly-lang-pack.yml  save-daily-modpack-history.yml  save-nightly-modpack-history.yml  sync-all-to-paratranz-all-langs.yml  sync-all-to-paratranz-parallel.yml  sync-all-to-paratranz.yml  sync-gt-lang-to-paratranz-all-langs.yml  sync-gt-lang-to-paratranz-parallel.yml  sync-gt-lang-to-paratranz.yml  sync-to-paratranz-manual-all.yml  sync-to-paratranz-parallel.yml  sync-to-paratranz.yml  upload-jar-translations.yml
daily-history/: GregTech.lang
de_DE/: GregTech_de_DE.lang
es_ES/: GregTech_es_ES.lang
internal/: __init__.py  comparable.py  generator.py  gt_langfiletype.py  issue.py  langfiletype.py  langset.py  modpack.py  scriptfiletype.py  scriptset.py  translationpack.py
ja_JP/: GregTech_ja_JP.lang
ja_JP/config/: InGameInfo.xml
ko_KR/: GregTech_ko_KR.lang
nightly-history/: GregTech.lang
pl_PL/: GregTech_pl_PL.lang
pt_BR/: GregTech_pt_BR.lang
pt_BR/config/: craftpresence.json  peripheral_names.txt
readmes/: README_de_DE.md  README_es_ES.md  README_fr_FR.md  README_pl_PL.md  README_pt_BR.md  README_ru_RU.md  README_template.md  README_tr_TR.md  README_zh_CN.md
ru_RU/: GregTech_ru_RU.lang
tests/filetypes/: test_filetype_gt_lang.py  test_filetype_lang.py  test_filetype_script.py
tests/paratranz/: test_client_wrapper.py
tests/utils/: test_env.py  test_file.py  test_line_iterator.py  test_unicode.py
tr_TR/: GregTech_tr_TR.lang
utils/: __init__.py
zh_CN/: GregTech_zh_CN.lang
(+4505 files in other folders)
