[tool.poetry]
name = "GTNH-translation-compare"
version = "0.1.0"
description = ""
authors = ["MuXiu1997 <muxiu1997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
marshmallow = "^3.18.0"
paratranz-client = {git = "https://git@github.com/MuXiu1997/ParaTranz-SDK-python.git", rev = "main", develop = true}

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11.2"
pytest = "^7.1.2"
mypy = "^0.961"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.mypy]
files = "src"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
