[tool.poetry]
name = "GTNH-translation-compare"
version = "0.1.0"
description = ""
authors = ["MuXiu1997 <muxiu1997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
marshmallow = "^3.18.0"
fire = "^0.4.0"
dulwich = "^0.20.46"
loguru = "^0.6.0"
pydantic = "^2.5.3"
nest-asyncio = "^1.5.8"
httpx = "^0.26.0"
asyncache = "^0.3.1"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11.2"
mypy = "^0.961"
black = "^22.3.0"
viztracer = "^0.16.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
files = "src"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
